--- a/src/components/ChatWidget/styles/ChatWidget.module.css
+++ b/src/components/ChatWidget/styles/ChatWidget.module.css
@@ -353,7 +353,7 @@
 
 /* Circular send button style matching reference */
 .sendButtonCircular {
-  background: #0dcaf0;
+  background: #10a37f;
   border: none;
   border-radius: 50%;
   width: 40px;
@@ -367,7 +367,7 @@
 }
 
 .sendButtonCircular:hover:not(:disabled) {
-  background: #0b9fc7;
+  background: #0d8f6c;
 }
 
 .sendButtonCircular:disabled {
